api documentation for login, logout, register
