# public/api-docs/api-docs.json
@@ -5,6 +5,109 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/register": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Register a new user",
+                "requestBody": {
+                "required": true,
+                "content": {
+                    "application/json": {
+                    "schema": {
+                        "type": "object",
+                        "properties": {
+                        "name": {
+                            "type": "string",
+                            "example": "John Doe"
+                        },
+                        "email": {
+                            "type": "string",
+                            "format": "email",
+                            "example": "user@example.com"
+                        },
+                        "password": {
+                            "type": "string",
+                            "format": "password",
+                            "example": "password"
+                        },
+                        "password_confirmation": {
+                            "type": "string",
+                            "format": "password",
+                            "example": "password"
+                        }
+                        },
+                        "required": ["name", "email", "password", "password_confirmation"]
+                    }
+                    }
+                }
+                },
+                "responses": {
+                "201": {
+                    "description": "User registered successfully"
+                },
+                "422": {
+                    "description": "Validation error"
+                }
+                }
+            }
+            },
+            "/login": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login a user",
+                "requestBody": {
+                "required": true,
+                    "content": {
+                        "application/json": {
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                            "email": {
+                                "type": "string",
+                                "format": "email",
+                                "example": "user@example.com"
+                            },
+                            "password": {
+                                "type": "string",
+                                "format": "password",
+                                "example": "password"
+                            }
+                            },
+                            "required": ["email", "password"]
+                        }   
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "User logged in successfully"
+                    },
+                    "401": {
+                        "description": "Invalid credentials"
+                    }
+                }
+            }
+            },
+            "/logout": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Logout a user",
+                "responses": {
+                    "200": {
+                        "description": "User logged out successfully"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            }
+        },
         "/api/doctors": {
             "get": {
                 "tags": [
